[package]
name = "variants-struct"
version = "0.1.0"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2018"
description = "A derive macro to convert enums into a struct where the variants are members"
readme = "README.md"
repository = "https://github.com/JoelCourtney/variants-struct"
license = "MIT OR Apache-2.0"
keywords = ["enum", "map", "struct"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0.73", features = ["full"] }
proc-macro2 = "1.0.27"
quote = "1.0.9"
Inflector = { version="0.11.4", default-features=false }
proc-macro-error = "1.0.4"

[dev-dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[lib]
proc-macro = true
path = "src/lib.rs"
