[package]
name = "variants-struct"
version = "0.1.2"
authors = ["Joel Courtney <joel.e.courtney@gmail.com>"]
edition = "2024"
description = "A derive macro to convert enums into a struct where the variants are members"
readme = "README.md"
repository = "https://github.com/JoelCourtney/variants-struct"
license = "MIT OR Apache-2.0"
keywords = ["enum", "map", "struct"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.101", features = ["full"] }
proc-macro2 = "1.0.95"
quote = "1.0.40"
heck = { version="0.5.0" }
proc-macro-error2 = "2.0.1"
check_keyword = "0.4.1"

[dev-dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[lib]
proc-macro = true
path = "src/lib.rs"
